# omnipost-api

./: .dockerignore  .gitignore  Dockerfile  TODO  pyproject.toml
.github/workflows/: docker-image.yml
app/: worker_logs
app/app/: settings.py  urls.py
app/omnipost_api/: admin.py  apps.py  fernet.py  instagram.json  models.py  serializers.py  urls.py  views.py
app/omnipost_api/migrations/: 0001_initial.py  0002_alter_postimage_post_configs_and_more.py  0002_notifications_stories_platform_actions_and_more.py  0002_postimage_published_posttext_published_and_more.py  0002_postvideo_caption_postvideo_video_and_more.py  0003_alter_postimage_post_configs_and_more.py  0003_dummymodel_postimage_schedule_postvideo_schedule_and_more.py  0003_notification_content_type_notification_object_id_and_more.py  0004_delete_dummymodel.py  0004_platforminstance_salt.py  0005_rename_remote_doc_docs_youtube_video_and_more.py  0006_rename_docs_doc_rename_notifications_notification.py  0007_remove_doc_platform_instance.py  0008_doc_title.py  0009_alter_notification_notification.py  0010_alter_stories_options.py  0011_storyimage_storyvideo_delete_stories.py  0012_platforminstance_instance_name_and_more.py
app/omnipost_api/platform_configs/: facebook.json  instagram.json  linkedin.json
